src/test/resources/valid_programs/if__scoping.notc
void main() {
    int i = 0;
    if (true)
        int i = 1;
    printInt(i);

    int j = 4;
    if (true) {
        j = 8;
        printInt(j);
        int j = 11;
        printInt(j);
    }
    printInt(j);
}
