src/test/resources/syntax_errors/assign_while_stm.notc
void main() {
    int num = while (true) 1;
}
